kubernetes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-api
spec:
  type: NodePort
  ports:
  - port: 8888
    protocol: TCP
  selector:
    name: http-api
